@@ -149,12 +149,13 @@ namespace Orthanc
     MetadataType_ModifiedFrom = 5,
     MetadataType_AnonymizedFrom = 6,
     MetadataType_LastUpdate = 7,
-    MetadataType_Instance_Origin = 8,          // New in Orthanc 0.9.5
-    MetadataType_Instance_TransferSyntax = 9,  // New in Orthanc 1.2.0
-    MetadataType_Instance_SopClassUid = 10,    // New in Orthanc 1.2.0
-    MetadataType_Instance_RemoteIp = 11,       // New in Orthanc 1.4.0
-    MetadataType_Instance_CalledAet = 12,      // New in Orthanc 1.4.0
-    MetadataType_Instance_HttpUsername = 13,   // New in Orthanc 1.4.0
+    MetadataType_Instance_Origin = 8,            // New in Orthanc 0.9.5
+    MetadataType_Instance_TransferSyntax = 9,    // New in Orthanc 1.2.0
+    MetadataType_Instance_SopClassUid = 10,      // New in Orthanc 1.2.0
+    MetadataType_Instance_RemoteIp = 11,         // New in Orthanc 1.4.0
+    MetadataType_Instance_CalledAet = 12,        // New in Orthanc 1.4.0
+    MetadataType_Instance_HttpUsername = 13,     // New in Orthanc 1.4.0
+    MetadataType_Instance_PixelDataOffset = 14,  // New in Orthanc 1.9.0
 
     // Make sure that the value "65535" can be stored into this enumeration
     MetadataType_StartUser = 1024,
